LetterSpacing fix

--- a/styles.css
+++ b/styles.css
@@ -95,10 +95,9 @@ p {
 }
 
 .logo__subtitle {
-  margin-top: 8px;
+  margin-top: 7px;
   display: flex;
   color: #00adff;
-  letter-spacing: -1px;
   flex-wrap: nowrap;
 }
 
@@ -113,5 +112,4 @@ p {
   opacity: 0.8;
   font-size: xx-small;
   line-height: 10px;
-  letter-spacing: normal;
 }
